feat: update repository and contact information
- Updated GitHub repository URLs to point to MervinPraison/PraisonAI-SVC
- Changed security contact from email to GitHub Issues
- Removed author email and simplified defensive package list
- Deleted PROJECT_STRUCTURE.md and RELEASE_READY.md files
- Reorganized documentation structure and simplified navigation links
- Updated package metadata in setup configuration

The changes primarily focus on transferring repository ownership and updating contact points

--- a/defensive-packages/praisonai-svcs/pyproject.toml
+++ b/defensive-packages/praisonai-svcs/pyproject.toml
@@ -7,13 +7,16 @@ authors = [
     { name = "MervinPraison" }
 ]
 requires-python = ">=3.11"
-license = { text = "MIT" }
+license = "MIT"
 dependencies = ["praisonai-svc>=1.0.0"]
 
 [project.urls]
-Homepage = "https://github.com/praisonai/praisonai-svc"
-Repository = "https://github.com/praisonai/praisonai-svc"
+Homepage = "https://github.com/MervinPraison/PraisonAI-SVC"
+Repository = "https://github.com/MervinPraison/PraisonAI-SVC"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = []
